<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grayColor">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/acme"
        android:text="@string/custom_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        tools:ignore="TextContrastCheck"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:background="@color/blue_grey" />

    <TextView
        android:id="@+id/txt_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/green_dark"
        android:fontFamily="@font/acme"
        android:textSize="12sp"
        android:minWidth="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginStart="20dp"
        tools:ignore="TextContrastCheck"/>

    <RelativeLayout
        android:id="@+id/customLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_option1"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edt_houseNumber"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:hint="@string/number"
            android:textSize="12sp"
            android:autofillHints="postalAddress"
            android:inputType="number"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <EditText
            android:id="@+id/edt_street"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:hint="@string/street"
            android:textSize="12sp"
            android:autofillHints="postalAddress"
            android:inputType="text"
            android:layout_toEndOf="@+id/edt_houseNumber"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <EditText
            android:id="@+id/edt_town"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:hint="@string/town"
            android:textSize="12sp"
            android:autofillHints="postalAddress"
            android:inputType="text"
            android:layout_toEndOf="@+id/edt_street"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <EditText
            android:id="@+id/edt_state"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:hint="@string/state"
            android:textSize="12sp"
            android:autofillHints="postalAddress"
            android:inputType="text"
            android:layout_below="@+id/edt_houseNumber"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <EditText
            android:id="@+id/edt_zipcode"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:hint="@string/zipcode"
            android:textSize="12sp"
            android:autofillHints="postalAddress"
            android:inputType="number"
            android:layout_alignStart="@+id/edt_town"
            android:layout_below="@+id/edt_town"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_alignStart="@+id/edt_street"
            android:layout_alignEnd="@+id/edt_street"
            android:layout_below="@+id/edt_street"
            android:layout_marginHorizontal="25dp"
            />

        <TextView
            android:id="@+id/txt_userLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:layout_below="@+id/edt_state"
            android:layout_alignStart="@+id/edt_state"
            android:layout_alignEnd="@+id/edt_state"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"/>

        <TextView
            android:id="@+id/txt_userLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:layout_below="@+id/edt_zipcode"
            android:layout_alignStart="@+id/edt_zipcode"
            android:layout_alignEnd="@+id/edt_zipcode"
            android:gravity="center_horizontal"
            tools:ignore="TextContrastCheck"/>
    </RelativeLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customLayout"
        android:background="@color/blue_grey"
        android:layout_marginVertical="5dp"/>

    <TextView
        android:id="@+id/lbl_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="@font/acme"
        android:textColor="@color/green_dark"
        android:textSize="12sp"
        android:minWidth="48dp"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        tools:ignore="TextContrastCheck"/>

    <Spinner
        android:id="@+id/spn_prevAddresses"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="80dp"
        android:padding="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_spinner"
        />

    <LinearLayout
        android:id="@+id/customLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_prevAddresses"
        app:layout_constraintBottom_toTopOf="@+id/btn_select"
        android:gravity="center"
        android:layout_marginHorizontal="2dp">

        <TextView
            android:id="@+id/txt_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/selected_latitude"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"
            tools:ignore="TextContrastCheck"
            android:minWidth="48dp"/>
        <TextView
            android:id="@+id/txt_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/selected_longitude"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck"
            android:minWidth="48dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customLayout2"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select"
        android:background="@color/blue_grey"
        />

    <LinearLayout
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_three"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:fontFamily="@font/acme"
            android:textColor="@color/green_dark"
            android:textSize="12sp"
            android:minWidth="48dp"
            android:layout_marginStart="20dp"
            tools:ignore="TextContrastCheck"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lbl_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_random"
            android:textSize="12sp"
            android:layout_marginHorizontal="10dp"
            android:minWidth="48dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            />

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customLayout3"
        app:layout_constraintBottom_toTopOf="@+id/statusLayout"
        android:background="@color/blue_grey"
        />

    <RelativeLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout">

        <TextView
            android:id="@+id/lbl_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate"
            android:textSize="16sp"
            android:fontFamily="@font/acme"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:labelFor="@+id/sw_activate"
            android:layout_centerHorizontal="true"
            tools:ignore="TextContrastCheck"
            android:minWidth="48dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_activate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/lbl_switch"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txt_reportedLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginEnd="40dp"
            tools:ignore="TextContrastCheck"
            android:minWidth="48dp"/>
        <TextView
            android:id="@+id/txt_reportedLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck"
            android:minWidth="48dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>